--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Apendices/01ApendiceA.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Apendices/01ApendiceA.tex
@@ -221,7 +221,7 @@
 				\textbf{Actores} &  ---\\
 				\hline
 				
-				\textbf{Descripción} &  \begin{tabular}{@{}l@{}} Tanto para el inicio de sesión como para registrar un nuevo usuario \\se invocará éste caso de uso, cuya tarea es consultar todos los \\usuarios almacenados en base de datos mediante Web Service. \end{tabular}\\
+				\textbf{Descripción} &  \begin{tabular}{@{}l@{}} Tanto para el inicio de sesión como para registrar un nuevo usuario \\se invocará este caso de uso, cuya tarea es consultar todos los \\usuarios almacenados en base de datos mediante Web Service. \end{tabular}\\
 				\hline
 				
 				\textbf{Precondiciones} &  Haber ingresado datos de usuario.\\
