--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
@@ -7,17 +7,17 @@
 \chapter{Introducción}
 
 \begin{resumen}
-	En el presente capítulo se detallarán las motivaciones que llevaron a la concepción de éste proyecto, junto a los elementos que componen el mismo exponiendo los objetivos y alcances pretendidos. Se realiza una reseña introductoria al contexto, dejando expuesta la importancia de resolución que se presenta.
+	En el presente capítulo se detallarán las motivaciones que llevaron a la concepción de este proyecto, junto a los elementos que componen el mismo exponiendo los objetivos y alcances pretendidos. Se realiza una reseña introductoria al contexto, dejando expuesta la importancia de resolución que se presenta.
 \end{resumen}
 
 %-------------------------------------------------------------------
 \section{Motivación}
 %-------------------------------------------------------------------
 \label{cap1:sec:motivation}
-La realización de encuestas es una técnica sumamente utilizada a lo largo de los años, ya que se trata de una herramienta indispensable a la hora de obtener datos en relación a una determinada población de interés. Su realización es llevada a cabo sobre una muestra específica de la misma, la cual debe ser representativa, ya que a partir de allí los resultados serán generalizados hacia el resto de la población \cite{poblacionEncuestas}. Obteniendo como resultado una estimación con cierto grado de certeza sobre cuál es la tendencia de opinión. Ésto es llevado a cabo mediante diferentes estudios estadísticos de selección aleatoria, de manera tal que permita poseer un intervalo de confianza alto, es decir donde la tasa de error en relación a la muestra con la población total sea muy baja.
+La realización de encuestas es una técnica sumamente utilizada a lo largo de los años, ya que se trata de una herramienta indispensable a la hora de obtener datos en relación a una determinada población de interés. Su realización es llevada a cabo sobre una muestra específica de la misma, la cual debe ser representativa, ya que a partir de allí los resultados serán generalizados hacia el resto de la población \cite{poblacionEncuestas}. Obteniendo como resultado una estimación con cierto grado de certeza sobre cuál es la tendencia de opinión. Esto es llevado a cabo mediante diferentes estudios estadísticos de selección aleatoria, de manera tal que permita poseer un intervalo de confianza alto, es decir donde la tasa de error en relación a la muestra con la población total sea muy baja.
 \\
 
-Específicamente a nivel salud, la realización de encuestas logra identificar y medir necesidades sanitarias de la correspondiente población de estudio, conformando de tal manera un primer paso para la planificación de políticas de salubridad. Es por ello que se considera a esta metodología de obtención de datos como una herramienta imprescindible a la hora de identificar necesidades \cite{importanciaEncuestas}. Con la recopilación de dicha información, se llegan a tomar medidas tanto preventivas como informativas, logrando de esta forma una reducción en las enfermedades y muertes causadas por distintas epidemiologías por ejemplo, así como también una mejora en la calidad de vida, por supuesto que mediante la aplicación de una adecuada política de estado. Además, proporciona denominadores poblacionales útiles para el cálculo de tasas y estimaciones del número de personas a riesgo.
+Específicamente a nivel salud, la realización de encuestas logra identificar y medir necesidades sanitarias de la correspondiente población de estudio, conformando de tal manera un primer paso para la planificación de políticas de salubridad. Es por ello que se considera a esta metodología de obtención de datos como una herramienta imprescindible a la hora de identificar necesidades \cite{importanciaEncuestas}. Con la recopilación de dicha información, se llegan a tomar medidas tanto preventivas como informativas, logrando de esta forma una reducción en las enfermedades y muertes causadas por distintas epidemiologías por ejemplo, así como también una mejora en la calidad de vida, por supuesto que mediante la aplicación de una adecuada política de estado. Además, proporciona denominadores poblacionales útiles para el cálculo de tasas y estimaciones del número de personas en riesgo.
 \\
 
 Algunos de los motivos que llevan a la realización de encuestas en el ámbito de la salud, se presentan a continuación \cite{itemsImportancia}:
@@ -25,7 +25,7 @@ Algunos de los motivos que llevan a la realización de encuestas en el ámbito de 
 	
 	\item Conocer problemas de salud percibida y conductas relacionadas a la salud de la población.
 	
-	\item Conocer el patrón de utilización de servicios de salud tanto preventivos como curativos o de rehabilitación.
+	\item Conocer el patrón de utilización de servicios de salud tanto preventivos, como curativos o de rehabilitación.
 	
 	\item Análisis de la relación entre el estado de salud, las conductas relacionadas y la	utilización de servicios sanitarios con los factores socioeconómicos.
 	
@@ -39,23 +39,23 @@ Enfocándonos más precisamente en la Facultad de Ciencias Médicas de la Universid
 la hora de realizar encuestas para obtener información de la población, actualmente se viene trabajando con las denominadas \textit{``salidas a terreno''}, es decir recorriendo diversos sectores o barrios y realizando dichas encuestas de la manera tradicional: \textit{``papel y lápiz''}.
 \\
 
-El empleo de ésta metodología en la forma tradicional trae aparejada una serie de dificultades, ya que la misma está propensa a errores y se aumenta la dificultad de aplicarlo en grandes escalas. Esto se debe, por ejemplo, a los elevados costos de la transacción y al gran inconveniente del análisis de los datos, ya que los mismos, una vez obtenidos deben cargarse a una base de datos en forma manual, produciendo que ésta tarea resulte tediosa, se prolongue por mucho tiempo e introduzca posibles errores en la carga. Ésto lleva a una reducción del alcance de los formularios para no tener que lidiar con inconvenientes mencionados, generando una mayor tasa de error por sobre lo obtenido.
+El empleo de esta metodología en la forma tradicional trae aparejada una serie de dificultades, ya que la misma está propensa a errores y se aumenta la dificultad de aplicarlo en grandes escalas. Esto se debe, por ejemplo, a los elevados costos de la transacción y al gran inconveniente del análisis de los datos, ya que los mismos, una vez obtenidos deben cargarse a una base de datos en forma manual, produciendo que esta tarea resulte tediosa, se prolongue por mucho tiempo e introduzca posibles errores en la carga. Esto lleva a una reducción del alcance de los formularios para no tener que lidiar con inconvenientes mencionados, generando una mayor tasa de error por sobre lo obtenido.
 
 %-------------------------------------------------------------------
 \section{Justificación}
 %-------------------------------------------------------------------
 \label{cap1:sec:justificacion}
 
-Las tecnologías de la información y de la comunicación(TIC) han sido un pilar importante en la transformación del mundo contemporáneo, a través de los avances significativos a lo largo de los años. La humanidad ha evolucionado los modos de comunicar, de entretener, de trabajar, de negociar, de gobernar y de socializar, sobre la base de la difusión y uso de las TIC a escala global \cite{introduccionTICS}. Específicamente, la industria de los dispositivos móviles (smartphones, tablets, etc.), está atravesando un período de rápida transformación mediante el desarrollo de aplicaciones móviles, las cuáles tienen la posibilidad de acceder a todas las características que posee el hardware, como por ejemplo el GPS, conexiones, cámara, etc.
+Las tecnologías de la información y de la comunicación (TIC) han sido un pilar importante en la transformación del mundo contemporáneo, a través de los avances significativos a lo largo de los años. La humanidad ha evolucionado los modos de comunicar, de entretener, de trabajar, de negociar, de gobernar y de socializar, sobre la base de la difusión y uso de las TIC a escala global \cite{introduccionTICS}. Específicamente, la industria de los dispositivos móviles (smartphones y tablets), está atravesando un período de rápida transformación mediante el desarrollo de aplicaciones móviles, las cuáles tienen la posibilidad de acceder a todas las características que posee el hardware, como por ejemplo el GPS, conexiones, cámara, etc.
 \\
 
-Por lo tanto, lo que se busca en éste proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas a realizar por la facultad de Ciencias Médicas de la UNL, logrando de esta forma subsanar muchos de los problemas mencionados anteriormente.
+Por lo tanto, lo que se busca en este proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas a realizar por la facultad de Ciencias Médicas de la UNL, logrando de esta forma subsanar muchos de los problemas mencionados anteriormente.
 \\
 
 La misma será realizada sobre la plataforma Android, teniendo en cuenta que a nivel nacional es una de las más utilizadas en relación a otros sistemas operativos como pueden ser iOS y Windows Phone. Esto se debe a que es un software de código abierto, accesible por todo el mundo \cite{androidImportancia} y a los menores costos de adquisición que poseen los dispositivos con dicha plataforma, quedando al alcance de cualquier persona o clase social. Por lo tanto, para la realización del proyecto se contará con un gran número de usuarios, teniendo en cuenta que hoy en día prácticamente todas las personas poseen un móvil. Argentina figura en el puesto 20 en cantidad de equipos con 50 millones de smartphones, donde el 85\% de ellos poseen sistema operativo Android. Las razones que hacen de la tecnología móvil un fenómeno se deben a la caída en los precios de los equipos; mejoras de los servicios y mayor alcance de las redes. Este escenario hace que no sólo a nivel local sino también todo el mundo sea cada vez más asidua la comunicación a través de datos y de redes sociales \cite{smarthphonesImportancia}.
 \\
 
-Es por ello que con la distribución de la aplicación se logrará tener un mayor acceso poblacional para la resolución de las encuestas desde sus dispositivos móviles, ya que la misma va a estar disponible para el público en general, pudiendo ser resueltas por personas a las que muy probablemente no sean alcanzadas en las \textit{``Salidas a Terreno''}. Cabe aclarar que a su vez se llevará a cabo un control adecuado que limite el acceso a todas las encuestas, para que de ésta forma los datos no sean tergiversados y que los obtenidos sean realmente de interés. 
+Es por ello que con la distribución de la aplicación se logrará tener un mayor acceso poblacional para la resolución de las encuestas desde sus dispositivos móviles, ya que la misma va a estar disponible para el público en general, pudiendo ser resueltas por personas a las que muy probablemente no sean alcanzadas en las \textit{``Salidas a Terreno''}. Cabe aclarar que a su vez se llevará a cabo un control adecuado que limite el acceso a todas las encuestas, para que de esta forma los datos no sean tergiversados y que los obtenidos sean realmente de interés. 
 \\
 
 La aplicación a realizar constará de dos formatos a tener en cuenta: por un lado, se encontrarán los denominados \textit{``usuarios específicos''}, es decir los encuestadores (usuarios de la Facultad de Cs. Médicas), que mediante validaciones en el registro obtendrán permisos de administrador logrando llevar a cabo el alta, baja y modificación (ABM) de las encuestas, y resolver las mismas de manera indefinida (salidas a terreno). Por otro lado, están los denominados \textit{``usuarios comunes''} que son la población en general, los cuales podrán acceder a la aplicación y responder cada encuesta disponible en una sola ocasión. En ambos casos, junto a la resolución se almacenará el lugar de residencia del encuestado (latitud y longitud), obteniendo los datos geolocalizados gracias al componente hardware del GPS que poseen los móviles.
@@ -64,7 +64,7 @@ La aplicación a realizar constará de dos formatos a tener en cuenta: por un lado
 Se aplicarán distintos mecanismos de control con la finalidad de obtener datos útiles. En primer lugar, en relación a la geolocalización del usuario, cuyo objetivo es el de obtener los datos correspondientes a su localización de residencia, para el posterior análisis por zonas. Es decir, al responder una encuesta desde un dispositivo móvil, la persona no necesariamente puede resolverla desde su casa, por lo tanto se verificará que la misma se encuentre en su hogar, caso contrario se solicitará introducir manualmente la dirección de residencia, mediante el API de Google Maps.  Por otro lado, en cuanto a la resolución de encuestas por parte de ``usuarios comunes'' se permitirá a la hora de su creación introducir limitantes de resolución, como por ejemplo el sexo y la edad mínima del encuestado.
 \\
 
-Se llevará a cabo el diseño y desarrollo de un Web Service, que será el encargado de comunicar y persistir los datos en base de datos mediante la aplicación móvil. Es importante que toda ésta información se encuentre alojada en un servicio externo para que la aplicación sea independiente a los datos y no quede atada a constantes actualizaciones. Posteriormente, éstos datos podrán exportarse
+Se llevará a cabo el diseño y desarrollo de un Web Service, que será el encargado de comunicar y persistir los datos en base de datos mediante la aplicación móvil. Es importante que toda esta información se encuentre alojada en un servicio externo para que la aplicación sea independiente a los datos y no quede atada a constantes actualizaciones. Posteriormente, estos datos podrán exportarse
 en distintos formatos para que especialistas médicos y bio-estadísticos trabajen con ellos en los respectivos software de estadística que usan habitualmente, para luego una toma de decisiones.
 \\
 
@@ -106,9 +106,9 @@ Dentro de las limitaciones a tener en cuenta en el proyecto se destacan las sigu
 	\item El Web Service debe tener alta disponibilidad y poder obtener de él respuestas en forma inmediata. Por lo tanto, el mismo será del tipo REST y será importante llevar a cabo buenas prácticas a la hora de su realización para no cargar el mismo.
 	\item Los denominados ``usuarios específicos'' obtendrán el rol de administrador en su registro, mediante la utilización de un código de seguridad que será provisto por superiores de la Facultad de Ciencias Médicas en el contexto que lo requiera.
 	\item Las encuestas permitidas a realizar serán solamente las correspondidas al ámbito de salud, siendo creadas únicamente por ``usuarios específicos''.
-	\item La aplicación contará con una sección de ``Noticias \& Información'' que informará sobre epidemiologías o distintas cuestiones importantes relacionadas a la salud. Los ABMs de ésta sección estarán a cargo de los ``usuarios específicos''.
+	\item La aplicación contará con una sección de ``Noticias \& Información'' que informará sobre epidemiologías o distintas cuestiones importantes relacionadas a la salud. Los ABMs de esta sección estarán a cargo de los ``usuarios específicos''.
 	\item Las encuestas podrán ser resuelta indefinidamente por ``usuarios específicos'' y en una sola ocasión por los ``usuarios comunes''.
-	\item Se aplicarán mecanismos de control en cuanto a la geolocalización y ``usuarios comunes'', con la finalidad de obtener los datos correctos. Más allá de ésto, se estima una colaboración por parte de los encuestados que responderán los formularios con la seriedad que ellos merecen.
+	\item Se aplicarán mecanismos de control en cuanto a la geolocalización y ``usuarios comunes'', con la finalidad de obtener los datos correctos. Más allá de esto, se estima una colaboración por parte de los encuestados que responderán los formularios con la seriedad que ellos merecen.
 	\item Se presentarán gráficos y estadísticas inmediatas sobre las encuestas respondidas, hacia los ``usuarios específicos''.
 	\item No se realizará el análisis de la información obtenida, los mismos serán exportados de la base de datos para la utilización posterior por otros profesionales.
 	\item Dentro del proyecto no se realizará el despliegue del Web Service en un servidor que se encuentre disponible en todo momento y que pueda ser accedido mediante una IP pública. Por lo tanto, no se subirá la aplicación al PlayStore de Google.
