--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo1.tex
@@ -51,6 +51,8 @@ A partir del trabajo realizado, con el fin de mejorar el desempeño general de la
 	
 	\item Aumentar la cantidad de pruebas unitarias y métodos de testing sobre la aplicación Android.
 	
+	\item Compatibilizar la aplicación en dispositivos móviles con sistemas operativos iOS y Windows Phone.
+	
 	\item Implementar un proceso de integración continua para mejorar los mecanismos de pruebas y despliegue de la aplicación.
 	
 	\item Llevar adelante el despliegue del Web Service en un servidor que se encuentre disponible todo el día y pueda ser accedido mediante una IP pública.
