--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte1.tex
@@ -37,7 +37,7 @@
 
 \partTitle{Conceptos básicos}
 
-\partDesc{En estos primeros capítulos del documento se va a establecer un marco teórico en función de explicar e introducir conceptos claves que forman parte del presente proyecto. Esto comprende los elementos que componen la especificación del proyecto y los fundamentos que sustentan las soluciones propuestas para alcanzar los objetivos planteados, junto con los alcances. Es importante que el lector conozca para la lectura posterior todos los conceptos presentados en ésta parte, debido a que se han aplicado cuestiones de los mismos y que devienen del análisis realizado en cuanto a la problemática y el enfoque propuesto para su solución.}
+\partDesc{En estos primeros capítulos del documento se va a establecer un marco teórico en función de explicar e introducir conceptos claves que forman parte del presente proyecto. Esto comprende los elementos que componen la especificación del proyecto y los fundamentos que sustentan las soluciones propuestas para alcanzar los objetivos planteados, junto con los alcances. Es importante que el lector conozca para la lectura posterior todos los conceptos presentados en esta parte, debido a que se han aplicado cuestiones de los mismos y que devienen del análisis realizado en cuanto a la problemática y el enfoque propuesto para su solución.}
 
 \partBackText{}
 
