--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/cover.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/cover.tex
@@ -51,7 +51,7 @@
 % los retornos de carro cuando se utilizan fuentes grandes.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \tituloPortada{%
-Desarrollo de aplicación móvil para el diseño y procesamiento de encuestas públicas sobre salud.
+Desarrollo de aplicación móvil para el diseño y procesamiento de encuestas públicas sobre salud
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
