--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
@@ -13,16 +13,16 @@
 \chapter{Resumen}
 \cabeceraEspecial{Resumen}
 
-A lo largo de los años se han utilizado las encuestas como método de recopilación de datos sobre una determinada población de interés, para luego poder llevar a cabo acciones sobre ella. Tanto la recopilación de datos, como el monitoreo y la evaluación son tareas que requieren de una amplia planificación metódica y de mucho tiempo.
+A lo largo de los años se han utilizado las encuestas como método de recopilación de datos sobre una determinada población de interés para luego poder llevar a cabo acciones sobre ella. Tanto la recopilación de datos, como el monitoreo y la evaluación son tareas que requieren de una amplia planificación metódica y de mucho tiempo.
 \\
 
-Específicamente en el ámbito de la salud, la recolección de datos en gran escala llega a tener un impacto masivo, ya que con ellos se puede llevar a cabo un seguimiento de la información y ayudar a tomar medidas inmediatas, tanto preventivas como informativas, sobre verdaderas prioridades, obteniendo como resultado la reducción de enfermedades, mejoras en la calidad de vida, etc.
+Específicamente en el ámbito de la salud, la recolección de datos en gran escala llega a tener un impacto masivo ya que con ellos se puede llevar a cabo un seguimiento de la información y ayudar a tomar medidas inmediatas, tanto preventivas como informativas. Las mismas son aplicadas sobre verdaderas prioridades, logrando resultados como por ejemplo la reducción de enfermedades y mejoras en la calidad de vida.
 \\
 
-Actualmente, la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral se encarga de realizar encuestas sobre salud de la manera tradicional, es decir con ``lápiz y papel''. Ésta metodología no solamente hace que el proceso esté propenso a errores, sino que también aumenta la dificultad de realización en forma masiva. Lo cual genera un aumento en los costos de transacción y demora en el procesamiento de los datos, imposibilitando de ésta forma tomar medidas urgentes.
+Actualmente, la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral se encarga de realizar encuestas sobre salud de la manera tradicional, es decir con ``lápiz y papel''. Esta metodología no solamente hace que el proceso esté propenso a errores, sino que también aumente la dificultad de realización en forma masiva. Esto genera un aumento en los costos de transacción y demora en el procesamiento de los datos, imposibilitando de tal forma tomar medidas urgentes.
 \\
 
-Aprovechando los distintos beneficios que proporcionan las tecnologías hoy en día, la finalidad del presente proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas, llevando a una reducción de las labores mencionadas, con un procesamiento de datos y obtención de resultados en cuestión de segundos. A su vez se brindará la posibilidad de obtener los datos de forma georeferenciada y exportarlos en formato Excel, para que distintas ramas de la medicina trabajen con ellos, así como también los bio-estadísticos que vuelcan dichos datos en distintos softwares de estadística.
+Aprovechando los distintos beneficios que proporcionan las tecnologías actuales, la finalidad del presente proyecto es llevar adelante el desarrollo de una aplicación móvil que digitalice las encuestas, llevando a una reducción de las labores mencionadas, con un procesamiento de datos y obtención de resultados en cuestión de segundos. A su vez se brindará la posibilidad de obtener los datos en forma georeferenciada y exportarlos en formato Excel, para que distintas ramas de la medicina trabajen con ellos, así como también los bio-estadísticos que vuelcan dichos datos en distintos softwares de estadística.
 \\
 
 Con la finalidad de independizar los datos que representan el núcleo del proyecto de la aplicación, se llevará a cabo el desarrollo de un Web Service el cual será consumido a la hora de cargar información y realizar los ABMs correspondientes.
