--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -134,7 +134,7 @@
 @misc{firebase3,
 	title = {Firebase, qu{\'e} es y para qu{\'e} sirve la plataforma de Google},
 	author = {Manuel Cardona},
-	howpublished = {\url{https://www.iebschool.com/blog/firebase-que-es-para-que-sirve-la-plataforma-desarroladores-google-seo-sem/}},
+	howpublished = {\url{https://bit.ly/2F7vY7u}},
 	note = {Accedido: 18/02/2019}
 }
 
